# copy-to-clipboard

./: LICENSE  README.md  pyproject.toml
src/copy_to_clipboard/: cli.py  config.py  copier.py
